--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -31,6 +31,7 @@
   --color-error: #ff3b30;
   --color-blue: #107FD1;
   --color-gray-checkbox: #c7c7cc;
+  --color-gray-divider: #EBEBF0;
 }
 /* color palette from <https://github.com/vuejs/theme> */
 
